--- a/style.css
+++ b/style.css
@@ -78,6 +78,12 @@ b{
   color:rgb(77, 77, 219);
 }
 
+hr{
+  border: 5px solid rgb(77, 77, 219);
+  border-radius: 5px;
+  width: 80px;
+}
+
 .flag-icon-gha{
   width: 15px;
   height: auto;
@@ -146,7 +152,7 @@ p, #contact a{
   background-color: #ddd;
 }
 #contact h3{
-  margin:10px 0 10px 0;
+  margin:20px 0 10px 0;
 }
 
 .socials{
